--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     .tab-action-btn:hover { background: var(--bg-hover); color: var(--text); }
 
     /* ── Panels ─────────────────────────────────────── */
-    .panel { display: none; flex: 1; flex-direction: column; }
+    .panel { display: none; flex: 1; flex-direction: column; min-height: 0; overflow: hidden; }
     .panel.active { display: flex; }
 
     /* ── Setup Panel ────────────────────────────────── */
@@ -246,6 +246,7 @@
     /* ── Chat Panel ─────────────────────────────────── */
     .chat-area {
       flex: 1;
+      min-height: 0;
       overflow-y: auto;
       padding: 20px;
     }
